<resources>
    <string name="app_name">Inspiration</string>
    <string name="sign_in">sign in</string>
    <string name="sign_in_email">Sign in with email</string>
    <string name="password">Password</string>

    <string name="sign_up">Sign up !</string>

    <string name="forget_password">Forgot password ?</string>
    <string name="dont_have_an_account">Don&quot;t have an account ?</string>
</resources>
