<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        android:id="@+id/tvAppName"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="50dp"
        android:background="@null"
        android:id="@+id/containerEmail"
        android:layout_below="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:translationY="5dp"
            android:textColor="@color/colorLightWhite"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorLightWhite"
            android:hint="@string/sign_in_email"
            android:id="@+id/edtEmail"
            android:nextFocusDown="@id/edtPassword"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_marginTop="30dp"
    android:layout_below="@+id/containerEmail"
    android:id="@+id/containerPassword"
    android:layout_height="wrap_content">
    <EditText
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/colorLightWhite"
        android:hint="@string/password"
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnSignIn"
        android:textStyle="bold"
        android:background="@drawable/btn_signin"
        android:textColor="@color/startBlue"
        android:layout_marginTop="250dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/tvAppName"
        android:textAllCaps="true"
        android:text="@string/sign_in"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_centerInParent="true"
        android:id="@+id/tvNoAccount"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorWhite"
        android:text="@string/dont_have_an_account"
        android:layout_below="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:clickable="true"
        android:layout_marginRight="60dp"
        android:layout_alignParentRight="true"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_below="@id/btnSignIn"
        android:textColor="@color/colorWhite"
        android:text="@string/sign_up"
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tvNoAccount"
        android:textColor="@color/colorWhite"
        android:text="@string/forget_password"
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>